--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <div id="message-container"></div>
   <form id="send-container">
-    <input type="text" id="message-input">
+    <input type="text" id="message-input" autocomplete="off">
     <button type="submit" id="send-button">Send</button>
     <button type="disconnect" id="disconnect-button">Disconnect</button>
   </form>
